...
            android:gravity="center"
            android:hint="평점"
            android:inputType="number"
            android:visibility="gone" />

        <Button
            android:id="@+id/submit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="확인"
            android:visibility="gone" />

        <TextView
            android:id="@+id/gtc"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
...
